minor fix on home page to reduce title size on mobile

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -34,3 +34,9 @@
   background-color: $light-gray;
   border-radius: 20px;
 }
+
+@media(max-width: 768px) {
+  h1 {
+    font-size: 24px !important;
+  }
+}
